// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-30 {
  color: #3722ed !important;
}

<div
  class="emotion-28 emotion-1 emotion-30 test fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-ar58s1"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-9d4l80"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-5b4itd"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-3j1r1c"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Divider.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-qvt59c"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-85ah6l"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-v62mhn"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-k93i8k"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Group.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-7t8jok"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-d4736p"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-5h42s1"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-ud6fkp"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Item.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-k69bke"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-c35dp6"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-hkjsfp"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-2nut1q"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-28 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-vl07n1"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-e8gviq"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-21gtmi"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-7gmalf"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-bmhn2n"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-2djkf5"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-jpssle"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-5p1od4"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-30 {
  background-color: red !important;
}

<div
  class="emotion-28 emotion-1 emotion-30 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-75i94b"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-o16np7"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-f7lmo9"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-qgss3r"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for an invisible dropdown menu 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-998rf0"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-3budrv"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-ggl5g5"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-osi9ei"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly with groups 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-c8i1ob"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-3ttuco"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-4jp0ha"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-s70lbb"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Divider.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-lj1p7i"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-ilbb6q"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-ugshs9"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-l57hr7"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Group.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-g5cgjp"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-qoj280"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-fuev4l"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-hsri0a"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Item.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-m6u8od"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-v5rpm1"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-pvpat2"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-1lhe0j"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-28 {
  padding: 0.5rem 0;
  min-width: 200px;
}

.emotion-28 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-n2adv4"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-aap3b8"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-1164ro"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-rh3dn2"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;
